# two_wheel_gz

./: README.md
gazebo_ws/fira_gz/launch/: kidsize_11th_world.launch  twowheel_world.launch
gazebo_ws/fira_gz/world/: kidsize.world  twowheel.world  twowheel_new.world
gazebo_ws/models/FIRA_Ground/: model.sdf
gazebo_ws/models/SP_Goal/: model.config  model.sdf
gazebo_ws/models/blue_box/: model.sdf
gazebo_ws/models/kidsize_sdf/: Untitled Document  model (copy).sdf  model.config  model.sdf
gazebo_ws/models/kidsize_sdf/meshes/: head_link.STL  left_ankle_link.STL  left_foot_link.STL  left_hip_roll_link.STL  left_hip_yaw_link.STL  left_lower_arm_link.STL  left_shank_link.STL  left_shoulder_pitch_link.STL  left_thigh_link.STL  left_upper_arm_link.STL  neck_link.STL  right_ankle_link.STL  right_foot_link.STL  right_hip_roll_link.STL  right_hip_yaw_link.STL  right_lower_arm_link.STL  right_shank_link.STL  right_shoulder_pitch_link.STL  right_thigh_link.STL  right_upper_arm_link.STL
gazebo_ws/models/my_ground_plane/: model.sdf
gazebo_ws/models/red_box/: model.sdf
gazebo_ws/models/yellow_box/: model.sdf
gazebo_ws/simmotionpackage/: CMakeLists.txt
gazebo_ws/simmotionpackage/include/simmotionpackage/: simmotionpackage.h
gazebo_ws/simmotionpackage/src/: simmotionpackage (copy).cpp  simmotionpackage.cpp
gazebo_ws/twowheel/: CMakeLists.txt  package.xml
gazebo_ws/twowheel/config/: joint_names_twowheel.yaml  twowheel_control.yaml
gazebo_ws/twowheel/launch/: display.launch  gazebo.launch  twowheel_control.launch
gazebo_ws/twowheel/meshes/: base_link.STL  camera_Link.STL  lwheel_back_link.STL  lwheel_front_link.STL  rwheel_back_link.STL  rwheel_front_link.STL
gazebo_ws/twowheel/urdf/: twowheel.csv  twowheel.urdf  twowheel_new.urdf
imageprocess/: CMakeLists.txt
imageprocess/include/imageprocess/ImageBase/: imagebase.hpp
imageprocess/include/imageprocess/ModelBase/: tdataunit.hpp  tmodelunit.hpp
imageprocess/include/imageprocess/main/: imagemain.h
imageprocess/launch/: imageprocess.launch
imageprocess/src/Coordinate/: tcoordinate.cpp
imageprocess/src/DrawImage/: DrawImage.cpp
imageprocess/src/ImageBase/: imagebase.cpp
imageprocess/src/ModelBase/: TColorFunctionUnit.cpp  tdataunit.cpp  tmodelunit.cpp
imageprocess/src/main/: imagemain.cpp
interface/kidsize_robot/: ImageProcessInterface.html  MotionControlInterface.html  ObsInterface105(for_OBSbackup).html  ObsInterface105.html  WalkingInterface.html
interface/kidsize_robot/css/: InterfaceTable.css
interface/kidsize_robot/js/: Interface.js
interface/sphere_interface/: Control Interface.html  Image Interface.html
interface/sphere_interface/js/: Interface.js  InterfaceTable.css  InterfaceTable.js
motionpackage/: CMakeLists.txt  package.cpp  package.h
strategy/: CMakeLists.txt  package.xml
strategy/Parameter/: CameraSet.ini  ColorModelData.ini  Continuous_Parameter.ini  LCstep_Parameter.ini  Single_Parameter.ini  Trajectory_Record.ods  simstand.ini  simstand2.ini
strategy/Parameter/sector/: 29.ini
strategy/include/strategy/kidsize/: strategymain.h
strategy/kidsize/: strategymain.cpp
strategy/twowheel/: color_recognition.cpp  draw_pic.py  twowheel.cpp  twowheel_backup.cpp  twowheel_controller.cpp
tku_libs/: CMakeLists.txt  README.md  package.xml
tku_libs/include/tku_libs/: TKU_tool.h  modelinfo.h  strategy_base.h  strategy_info.h
tku_libs/libKidsize/: TKU_tool.cpp
tku_libs/libgazebo/: modelinfo.cpp
tku_libs/libstrategy/: strategy_base.cpp  strategy_info.cpp
tku_msgs/: CMakeLists.txt  README.md
tku_msgs/msg/motionpackage/: SensorPackage.msg  SensorSet.msg
tku_msgs/msg/walkinggait/: Interface.msg  parameter.msg
tku_msgs/srv/walkinggait/: WalkingGaitParameter.srv
usb_cam/: CMakeLists.txt
usb_cam/include/tdataunit/: tdataunit.hpp
usb_cam/nodes/: usb_cam_node.cpp
usb_cam/src/: tdataunit.cpp
walkinggait/: CMakeLists.txt
walkinggait/ParameterInfo/: parameterinfo.cpp
walkinggait/WalkingGaitUnit/InverseKinematics/: InverseKinematics.cpp
walkinggait/WalkingGaitUnit/WalkingTrajectory/: WalkingTrajectory.cpp
walkinggait/include/walkinggait/: InverseKinematics.hpp  walkinggait.hpp
walkinggait/src/: walkinggait.cpp
web/: robot_controller.html
web/js/: KeyboardControl.js  move.js  topic.js
