<package format="2">
  <name>strategy</name>
  <version>1.0.0</version>
  <description>strategy</description>

  <maintainer email="s8204712@gmail.com">Vincent Rabaud</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>kidsize_libs</build_depend>

  <build_export_depend>kidsize_libs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>kidsize_libs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <!--
<export>
    <image_transport plugin="${prefix}/resized_plugins.xml"/>
  </export>
-->
</package>
