<package format="2">
  <name>twowheel</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for twowheel</p>
    <p>This package contains configuration data, 3D models and launch files
for twowheel robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <architecture_independent />
  </export>
</package>
